<resources>
    <string name="app_name">Rise Up</string>
    <string name="login">Login</string>
    <string name="sign_in_to_your_account">Sign in \n to your account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="create_your_account">Create \n your account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="privacy_amp_terms"><![CDATA[Privacy & terms]]></string>
    <string name="sign_up">Sign Up</string>
    <string name="get_started">Get Started</string>
    <string name="rise_with_us">Rise With Us</string>
    <string name="boards">Boards</string>
    <string name="board">Board</string>
    <string name="totalTasks">Tasks</string>
    <string name="tags">Tags</string>
    <string name="statistics">Statistics</string>
    <string name="logout">Logout</string>
    <string name="nav_open">open</string>
    <string name="nav_close">close</string>
    <string name="open_nav">open</string>
    <string name="close_nav">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change">Change</string>
    <string name="save">Save</string>
    <string name="users">Employees</string>
    <string name="total_tasks">Total Tasks</string>
    <string name="create_board">Create Board</string>
    <string name="board_name">Board Name</string>
    <string name="add_employees">Add Employees</string>
    <string name="add_progress_columns">Add Progress Columns</string>
    <string name="create">Create</string>
    <string name="search">Search...</string>
    <string name="progress_column">Progress Column</string>
    <string name="due_date">Due Date</string>
    <string name="edit">Edit</string>
    <string name="tag_name">Tag Name</string>
    <string name="create_tag">Create Tag</string>
    <string name="edit_tag">Edit Tag</string>
    <string name="add_tak">Add Tak</string>
    <string name="to_expire">to expire</string>
    <string name="description">Description</string>
    <string name="responsible">Responsible</string>
    <string name="recommended">Recommended</string>
    <string name="what_about_this_task">What about this task?</string>
    <string name="payment_terms_for_raiseup">Payment Terms for RaiseUp</string>
    <string name="payment_terms_header">Thank you for choosing RaiseUp! We are excited to have you on board as a valued user of our project management application, designed to streamline your workflow and enhance collaboration. To ensure clarity and transparency regarding our payment terms, please review the following information:</string>
    <string name="data_collection_and_processing">Data Collection and Processing:</string>
    <string name="data_collection_and_processing_txt">We collect and process user data solely for the purpose of providing and improving our services. The data we collect may include personal information such as names, username addresses, and usage data. We ensure that the data collected is relevant, limited to what is necessary, and processed with the user\'s consent.</string>
    <string name="lawful_basis_for_processing">Lawful Basis for Processing</string>
    <string name="lawful_basis_for_processing_txt">Our legal basis for processing personal data is typically based on the user\'s consent or the necessity of processing for the performance of a contract. Users have the right to withdraw their consent at any time.</string>
    <string name="user_rights">User Rights</string>
    <string name="user_rights_txt">Under the GDPR, users have various rights, including the right to access, rectify, and erase their personal data.</string>
    <string name="data_security">Data Security</string>
    <string name="data_security_txt">We implement robust security measures to protect user data from unauthorized access, disclosure, alteration, and destruction. These measures include encryption, access controls, and regular security assessments.</string>
    <string name="data_sharing">Data Sharing</string>
    <string name="data_sharing_txt">We do not sell or rent user data to third parties. However, we may share data with trusted third-party service providers who assist us in delivering our services. Such third parties are also required to comply with data protection regulations.</string>
    <string name="thank_you_txt">Thank you for trusting us with your data privacy.\n\nSincerely,\nRaiseUp</string>
    <string name="internet_connection_offline">The Internet connection appears to be offline.</string>
    <string name="try_again">Try Again</string>
    <string name="board_created">Board Created</string>
    <string name="expired">Expired</string>
    <string name="create_task">Create Task</string>
    <string name="task_name">Task Name</string>
    <string name="add_tags">Add Tags</string>
    <string name="enter_a_date">Enter a date</string>
    <string name="day">Day</string>
    <string name="days">Days</string>
    <string name="completed">Completed</string>
    <string name="choose_column">Choose Column</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_text">Do you really want to delete? \nThis process cannot be undone</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="was_created_successfully">was created successfully</string>
    <string name="you_have_an_expired_card">You have an expired card</string>
    <string name="task">Task</string>
    <string name="user_not_found">User not found</string>
    <string name="username_exists">Username already exists</string>
    <string name="email_exists">Email already exists</string>
    <string name="access_denied">Access denied</string>
    <string name="something_happened">Something happened</string>
    <string name="tag_not_found">Tag not found</string>
    <string name="no_columns_found">No columns found</string>
    <string name="board_not_found">Board not found</string>
    <string name="task_not_found">Task not found</string>
    <string name="step_not_found">Step not found</string>
    <string name="title_is_mandatory">Title is mandatory</string>
    <string name="complete_the_mandatory_fields">Complete the mandatory fields</string>
    <string name="please_try_again_later">Please try again later</string>
    <string name="bad_credentials">Bad credentials</string>
    <string name="delete_board">Delete Board</string>
    <string name="change_column_order">Change Column Order</string>
    <string name="employee_progress">Employee Progress</string>
    <string name="open_tasks">Open Tasks</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="added_you_to">" added you to "</string>
    <string name="difficulty">Difficulty</string>
    <string name="change_difficulty">Change Difficulty</string>
    <string name="intermediate">Intermediate</string>
    <string name="senior">Senior</string>
    <string name="mid_level">Mid Level</string>
    <string name="junior">Junior</string>
    <string name="enter_a_difficulty_level">Enter a Difficulty Level</string>
    <string name="performance">Performance</string>
    <string name="personal_info">Personal Info</string>
</resources>