<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/activity"
    tools:context=".Activity.PaymentTermsActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            style="@style/title_reg_log"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/payment_terms_for_raiseup"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/imageButtonClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/ic_close"
            style="@style/toolbar_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_terms_header"
                style="@style/payment_of_terms_item"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/basic_padding_20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_collection_and_processing"
                style="@style/payment_of_terms_item_head"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_collection_and_processing_txt"
                style="@style/payment_of_terms_item"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/basic_padding_20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lawful_basis_for_processing"
                style="@style/payment_of_terms_item_head"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lawful_basis_for_processing_txt"
                style="@style/payment_of_terms_item"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/basic_padding_20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_rights"
                style="@style/payment_of_terms_item_head"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_rights_txt"
                style="@style/payment_of_terms_item"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/basic_padding_20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_security"
                style="@style/payment_of_terms_item_head"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_security_txt"
                style="@style/payment_of_terms_item"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/basic_padding_20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_sharing"
                style="@style/payment_of_terms_item_head"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_sharing_txt"
                style="@style/payment_of_terms_item"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/basic_padding_20dp"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/basic_padding_20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thank_you_txt"
                style="@style/payment_of_terms_item"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>