<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    style="@style/bottomSheet">
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_delete_item"/>
    <View
        android:layout_width="wrap_content"
        android:layout_height="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure"
        android:textSize="20sp"
        android:textColor="?text_color"
        android:fontFamily="@font/euclid_circular_a_bold"/>
    <View
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_text"
        android:textSize="14sp"
        android:textColor="?shadow_color"
        android:fontFamily="@font/euclid_circular_a_regular"/>
    <View
        android:layout_width="wrap_content"
        android:layout_height="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/submit_button"
            android:textColor="?shadow_color"
            android:backgroundTint="?element_back_color"
            android:text="@string/cancel"/>
        <View
            android:layout_width="20dp"
            android:layout_height="0dp"/>
        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/submit_button"
            android:text="@string/delete"/>
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>