<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/bottomSheet">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_difficulty"
            style="@style/title_reg_log"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <ImageButton
            android:id="@+id/imageButtonClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:padding="@dimen/basic_padding_20dp"
            android:layout_marginEnd="-20dp"
            android:src="@drawable/ic_close"
            android:layout_gravity="center_vertical|end"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <TextView
        android:id="@+id/textViewSenior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textSize="18sp"
        android:fontFamily="@font/euclid_circular_a_regular"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:background="@drawable/ic_input_field_back"
        android:backgroundTint="@color/red"
        android:backgroundTintMode="src_over"
        android:text="@string/senior"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"/>
    <TextView
        android:id="@+id/textViewIntermediate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textSize="18sp"
        android:fontFamily="@font/euclid_circular_a_regular"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:background="@drawable/ic_input_field_back"
        android:backgroundTint="@color/orange"
        android:backgroundTintMode="src_over"
        android:text="@string/intermediate"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"/>
    <TextView
        android:id="@+id/textViewMidLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textSize="18sp"
        android:fontFamily="@font/euclid_circular_a_regular"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:background="@drawable/ic_input_field_back"
        android:backgroundTint="@color/yellow"
        android:backgroundTintMode="src_over"
        android:text="@string/mid_level"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"/>
    <TextView
        android:id="@+id/textViewJunior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textSize="18sp"
        android:fontFamily="@font/euclid_circular_a_regular"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:background="@drawable/ic_input_field_back"
        android:backgroundTint="@color/green"
        android:backgroundTintMode="src_over"
        android:text="@string/junior"/>

</LinearLayout>