<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/bottomSheet">
    <TextView
        android:id="@+id/textViewAddEmployees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textSize="18sp"
        android:fontFamily="@font/euclid_circular_a_regular"
        android:textAlignment="center"
        android:textColor="?text_color"
        android:background="@drawable/ic_input_field_back"
        android:text="@string/add_employees"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"/>
    <TextView
        android:id="@+id/textViewChangeColumnOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textSize="18sp"
        android:fontFamily="@font/euclid_circular_a_regular"
        android:textAlignment="center"
        android:textColor="?text_color"
        android:background="@drawable/ic_input_field_back"
        android:text="@string/change_column_order"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"/>
    <TextView
        android:id="@+id/textViewDeleteBoard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textSize="18sp"
        android:fontFamily="@font/euclid_circular_a_bold"
        android:textAlignment="center"
        android:textColor="?submit_button_color"
        android:background="@drawable/ic_input_field_back"
        android:backgroundTint="@color/error_color"
        android:backgroundTintMode="src_over"
        android:text="@string/delete_board"/>
</LinearLayout>