<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/activity"
    tools:context=".Activity.CreateBoardActivity">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_board"
            style="@style/title_reg_log"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <ImageButton
            android:id="@+id/imageButtonClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:paddingTop="@dimen/basic_padding_20dp"
            android:paddingBottom="@dimen/basic_padding_20dp"
            android:paddingLeft="@dimen/basic_padding_20dp"
            android:src="@drawable/ic_close"
            android:layout_gravity="center_vertical|end"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <EditText
        android:id="@+id/editTextBoardName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/input_field"
        android:hint="@string/board_name"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_employees"
                    style="@style/title_reg_log"
                    android:paddingBottom="10dp"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <ImageButton
                    android:id="@+id/imageButtonAddEmployees"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add"
                    android:padding="@dimen/basic_padding_20dp"
                    android:layout_marginEnd="-20dp"
                    android:background="@null"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewEmployees"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_progress_columns"
                    style="@style/title_reg_log"
                    android:paddingBottom="10dp"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <ImageButton
                    android:id="@+id/imageButtonAddColumn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add"
                    android:padding="@dimen/basic_padding_20dp"
                    android:layout_marginEnd="-20dp"
                    android:background="@null"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewColumns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </ScrollView>
    <View
        android:layout_width="wrap_content"
        android:layout_height="20dp"/>
    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/submit_button"
        android:text="@string/create"/>
</androidx.appcompat.widget.LinearLayoutCompat>